[package]
name = "oni-cv"
version = "0.1.0"
authors = ["Guilherme Torres <guilhermetorres97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
math = {path = "math"}
img_proc = {path = "img_proc"}

[workspace]
members = [
    "math",
    "img_proc",
]
